// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placement Ordering snapshot renders all default items 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={false}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "image": Object {
              "disabled": false,
            },
            "showParagraphs": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "choiceLabel": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Choice label",
            "settings": true,
          },
          "choices": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": true,
              },
            },
            "label": "Choices",
            "settings": true,
          },
          "feedback": Object {
            "enabled": true,
            "label": "Feedback",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "choices": 150,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "choicesWithPlacementArea": 240,
            "choicesWithoutPlacementArea": 300,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "numberedGuides": Object {
            "label": "Numbered guides",
            "settings": true,
          },
          "orientation": Object {
            "label": "Orientation",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "placementArea": Object {
            "label": "Placement Area",
            "settings": true,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Item Stem",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "removeTilesAfterPlacing": Object {
            "label": "Remove Tiles after placing",
            "settings": false,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "settingsPanelDisabled": false,
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "targetLabel": Object {
            "label": "Target label",
            "settings": true,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "scoringType": false,
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "choiceLabelEnabled": undefined,
            "feedbackEnabled": undefined,
            "language": false,
            "language.enabled": false,
            "numberedGuides": false,
            "orientation": undefined,
            "partialScoring": false,
            "placementArea": undefined,
            "removeTilesAfterPlacing": false,
          },
        }
      }
      model={
        Object {
          "choiceLabel": "",
          "choiceLabelEnabled": true,
          "choices": Array [],
          "correctResponse": Array [],
          "feedbackEnabled": false,
          "numberedGuides": false,
          "orientation": "vertical",
          "partialScoring": true,
          "placementArea": false,
          "prompt": "",
          "promptEnabled": true,
          "rationale": "",
          "rationaleEnabled": true,
          "removeTilesAfterPlacing": true,
          "scoringType": "auto",
          "studentInstructionsEnabled": true,
          "targetLabel": "",
          "teacherInstructions": "",
          "teacherInstructionsEnabled": true,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <InputContainer
    label="Teacher Instructions"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "image": Object {
            "disabled": false,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <InputContainer
    label="Item Stem"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "image": Object {
            "disabled": false,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <FormSection
    label="Define Choices"
    labelExtraStyle={
      Object {
        "display": "inline-flex",
      }
    }
  >
    <div>
      <WithStyles(Tooltip)
        classes={
          Object {
            "tooltip": undefined,
          }
        }
        disableFocusListener={true}
        disableTouchListener={true}
        placement="right"
        title="Validation requirements:
There should be at least 3 tokens.
The tokens should not be empty and should be unique.
The correct ordering should not be identical to the initial ordering."
      >
        <pure(InfoIcon)
          color="primary"
          fontSize="small"
          style={
            Object {
              "marginLeft": "8px",
            }
          }
        />
      </WithStyles(Tooltip)>
    </div>
    <div>
      <InputContainer
        label="Choice label"
      >
        <EditableHtml
          allowValidation={false}
          languageCharactersProps={
            Array [
              Object {
                "language": "spanish",
              },
              Object {
                "language": "special",
              },
            ]
          }
          markup=""
          mathMlOptions={
            Object {
              "mmlEditing": false,
              "mmlOutput": false,
            }
          }
          maxImageHeight={150}
          maxImageWidth={300}
          onChange={[Function]}
          onDone={[Function]}
          pluginProps={
            Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "showParagraphs": Object {
                "disabled": false,
              },
              "textAlign": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": false,
              },
            }
          }
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
    <WithStyles(ChoiceEditor)
      choices={Array []}
      choicesLabel="Choices"
      correctResponse={Array []}
      errors={Object {}}
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={150}
      maxImageWidth={300}
      onChange={[Function]}
      placementArea={false}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
      pluralChoiceLabel="Choices"
      singularChoiceLabel="Choice"
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </FormSection>
  <InputContainer
    label="Rationale"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "image": Object {
            "disabled": false,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
</ConfigLayout>
`;

exports[`Placement Ordering snapshot renders custom items 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={false}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "image": Object {
              "disabled": false,
            },
            "showParagraphs": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "choiceLabel": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Choice label",
            "settings": true,
          },
          "choices": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": true,
              },
            },
            "label": "Choices",
            "settings": true,
          },
          "feedback": Object {
            "enabled": true,
            "label": "Feedback",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "choices": 150,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "choicesWithPlacementArea": 240,
            "choicesWithoutPlacementArea": 300,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "numberedGuides": Object {
            "label": "Numbered guides",
            "settings": true,
          },
          "orientation": Object {
            "label": "Orientation",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "placementArea": Object {
            "label": "Placement Area",
            "settings": true,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Item Stem",
            "required": false,
            "settings": false,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "removeTilesAfterPlacing": Object {
            "label": "Remove Tiles after placing",
            "settings": true,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "settingsPanelDisabled": false,
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "targetLabel": Object {
            "label": "Target label",
            "settings": true,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": false,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "scoringType": false,
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "choiceLabelEnabled": undefined,
            "feedbackEnabled": undefined,
            "language": false,
            "language.enabled": false,
            "numberedGuides": false,
            "orientation": undefined,
            "partialScoring": false,
            "placementArea": undefined,
            "removeTilesAfterPlacing": undefined,
          },
        }
      }
      model={
        Object {
          "choiceLabel": "",
          "choiceLabelEnabled": true,
          "choices": Array [],
          "correctResponse": Array [],
          "feedbackEnabled": false,
          "numberedGuides": false,
          "orientation": "vertical",
          "partialScoring": true,
          "placementArea": false,
          "prompt": "",
          "promptEnabled": true,
          "rationale": "",
          "rationaleEnabled": true,
          "removeTilesAfterPlacing": true,
          "scoringType": "auto",
          "studentInstructionsEnabled": true,
          "targetLabel": "",
          "teacherInstructions": "",
          "teacherInstructionsEnabled": true,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <InputContainer
    label="Teacher Instructions"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "image": Object {
            "disabled": false,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <InputContainer
    label="Item Stem"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "image": Object {
            "disabled": false,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <FormSection
    label="Define Choices"
    labelExtraStyle={
      Object {
        "display": "inline-flex",
      }
    }
  >
    <div>
      <WithStyles(Tooltip)
        classes={
          Object {
            "tooltip": undefined,
          }
        }
        disableFocusListener={true}
        disableTouchListener={true}
        placement="right"
        title="Validation requirements:
There should be at least 3 tokens.
The tokens should not be empty and should be unique.
The correct ordering should not be identical to the initial ordering."
      >
        <pure(InfoIcon)
          color="primary"
          fontSize="small"
          style={
            Object {
              "marginLeft": "8px",
            }
          }
        />
      </WithStyles(Tooltip)>
    </div>
    <div>
      <InputContainer
        label="Choice label"
      >
        <EditableHtml
          allowValidation={false}
          languageCharactersProps={
            Array [
              Object {
                "language": "spanish",
              },
              Object {
                "language": "special",
              },
            ]
          }
          markup=""
          mathMlOptions={
            Object {
              "mmlEditing": false,
              "mmlOutput": false,
            }
          }
          maxImageHeight={150}
          maxImageWidth={300}
          onChange={[Function]}
          onDone={[Function]}
          pluginProps={
            Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "showParagraphs": Object {
                "disabled": false,
              },
              "textAlign": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": false,
              },
            }
          }
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
    <WithStyles(ChoiceEditor)
      choices={Array []}
      choicesLabel="Choices"
      correctResponse={Array []}
      errors={Object {}}
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={150}
      maxImageWidth={300}
      onChange={[Function]}
      placementArea={false}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
      pluralChoiceLabel="Choices"
      singularChoiceLabel="Choice"
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </FormSection>
  <InputContainer
    label="Rationale"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "image": Object {
            "disabled": false,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
</ConfigLayout>
`;
